@@ -81,7 +81,7 @@ import sun.swing.PrintingStatus;
  *      TableModel dataModel = new AbstractTableModel() {
  *          public int getColumnCount() { return 10; }
  *          public int getRowCount() { return 10;}
- *          public Object getValueAt(int row, int col) { return new Integer(row*col); }
+ *          public Object getValueAt(int row, int col) { return Integer.valueOf(row*col); }
  *      };
  *      JTable table = new JTable(dataModel);
  *      JScrollPane scrollpane = new JScrollPane(table);
